# MYCELIUM

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  README.ru.md  docker-compose.full.yml  docker-compose.vps.yml  docker-compose.yml  pyproject.toml
.claude/skills/mycelium-discover/: SKILL.md
.claude/skills/mycelium-domain/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  DESIGN_TELEGRAM_UX.txt  MAINTENANCE.md  README.md
mycelium/: __init__.py  cli.py  config.py  exceptions.py  logging.py
mycelium/agent/: workspace.py
mycelium/core/: __init__.py  community.py  export.py  models.py  mycelium.py  skills.py  sleep.py  telemetry.py  types.py
mycelium/domain/: __init__.py  matcher.py  models.py  registry.py  tracking.py
mycelium/driver/: __init__.py  driver.py  neo4j_driver.py
mycelium/embedder/: __init__.py  api.py  client.py  local.py
mycelium/ingest/: converter.py
mycelium/knowledge/: extraction.md  ontology.md
mycelium/llm/: __init__.py  base.py  client.py  client_litellm.py  prompts.py  session.py
mycelium/mcp/: __init__.py  server.py
mycelium/obsidian/: __init__.py  frontmatter.py  relations.py  sync.py
mycelium/prompts/: __init__.py  ingest.py  summary.py
mycelium/render/: __init__.py  queries.py  server.py
mycelium/search/: __init__.py  config.py  rerankers.py  search.py
mycelium/telegram/: __main__.py  agent.py  bot.py  dispatcher.py  formatter.py  keyboard.py  mcp_client.py  middleware.py  sanitizer.py  streaming.py  stt.py
mycelium/tend/: __init__.py  lint.py  orchestrator.py  report.py
mycelium/utils/: __init__.py  chunker.py  decay.py  dedup.py
mycelium/vault/: __init__.py  storage.py
scripts/: check_diagrams.py  connect-vps.sh  install-vps.sh  install.sh  uninstall.sh  update.sh  vault-upload.py  wait-healthy.sh
tests/telegram/: test_pure.py  test_telegram.py
(+18 files in other folders)
